--- a/assets/settings.json
+++ b/assets/settings.json
@@ -1,6 +1,6 @@
 {
   "window":{
-    "fullscreen" : true,
+    "fullscreen" : false,
     "resolution" : {
       "width" : 1920,
       "height": 1080
@@ -10,9 +10,21 @@
   "camera" : {
     "name" : "Logitech HD Pro Webcam C910",
     "resolution" : {
-      "width" : 1920,
-      "height": 1080
+      "width" : 1280,
+      "height": 720
     }
+  },
+
+  "background" : {
+    "fade_speed": 0.01,
+    "max_opacity": 0.8,
+    "min_opacity": 0.0
+  },
+
+  "stages" : {
+    "one": 0,
+    "two": 2,
+    "three": 4
   },
 
   "tracking" : {
@@ -20,12 +32,21 @@
   },
 
   "painter" : {
+    "cutoff"      : 0.01,
+    "face_height" : 300,
     "wipe_speed"  : 0.0005,
-    "noise_scale" : 0.004
+    "noise_scale" : 0.004,
+    "hue_rotate_speed": 0.0001
   },
 
   "collage" : {
-    "extra_boxes" : 0,
-    "rotation_amount" : 0
+    "box_count" : 0,
+    "rotation" : 0,
+    "smoothing" : 20
+  },
+
+  "face" : {
+    "scale_up": 2.0
   }
+
 }
