Rendering tidy up, shifted rendering from main file to FaceRenderer.cpp and broke down the over sized functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,24 +17,23 @@ set( USE_AVX_INSTRUCTIONS ON)
 set( FACEYTHING_TARGET "FaceyThing" )
 
 set( FACEYTHING_SOURCES
+
+     ${APP_PATH}/src/json.hpp
      ${APP_PATH}/src/FaceyThingApp.cpp
-
      ${APP_PATH}/include/CinderOpenCV.h
-     ${APP_PATH}/include/CameraCapture.h
 
+     ${APP_PATH}/include/CameraCapture.h
      ${APP_PATH}/include/FaceTracker.h
      ${APP_PATH}/include/ObjectTracker.h
      ${APP_PATH}/include/FaceDetector.h
      ${APP_PATH}/include/LandmarkDetector.h
-
      ${APP_PATH}/include/FacialComponents.h
      ${APP_PATH}/include/CollageItem.h
      ${APP_PATH}/include/FaceCollage.h
-
      ${APP_PATH}/include/FacePainter.h
      ${APP_PATH}/include/FaceyThing.h
      ${APP_PATH}/include/FaceMesh.h
-
+     ${APP_PATH}/include/FaceRenderer.h
 
      ${APP_PATH}/src/CameraCapture.cpp
      ${APP_PATH}/src/ObjectTracker.cpp
@@ -47,7 +46,8 @@ set( FACEYTHING_SOURCES
      ${APP_PATH}/src/FacePainter.cpp
      ${APP_PATH}/src/FaceyThing.cpp
      ${APP_PATH}/src/FaceMesh.cpp
-     ${APP_PATH}/src/json.hpp
+     ${APP_PATH}/src/FaceRenderer.cpp
+
 )
 
 set ( INCLUDE_PATHS
