--- a/assets/settings.json
+++ b/assets/settings.json
@@ -10,10 +10,10 @@
   },
 
   "camera": {
-    "name": "Logitech HD Pro Webcam C920",
+    "name": "Logitech BRIO",
     "resolution": {
-      "width": 1920,
-      "height": 1080
+      "width": 3840,
+      "height": 2160
     }
   },
 
@@ -30,7 +30,7 @@
   },
 
   "tracking" : {
-    "scale_factor" : 4
+    "scale_factor" : 8
   },
 
   "painter" : {
